# Checkers_SFML

./: README.md
Checkers/: CMakeLists.txt  Game.cpp  Game.h  main.cpp
