cmake_minimum_required(VERSION 3.22)
project(Checkers)

set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

add_executable(Checkers main.cpp Game.cpp Game.h)

find_package(SFML 2.5 COMPONENTS system window graphics network audio REQUIRED)
include_directories(${SFML_INCLUDE_DIRS})
target_link_libraries(Checkers sfml-system sfml-window sfml-graphics sfml-audio sfml-network)